prevent disqus overflowing X while preloading

--- a/assets/stylus/parts/me.styl
+++ b/assets/stylus/parts/me.styl
@@ -231,3 +231,6 @@ header
   padding 0.2rem 1rem
   background $colorDark
   color $colorLight
+
+.disqus
+  overflow-x hidden
